update voucher